使用异步 ring handler 处理请求，兼容 JDK19 vThreads